removed issue with horizontal scrollbar in mobile viewmode

--- a/smallscreen_62em.css
+++ b/smallscreen_62em.css
@@ -22,6 +22,7 @@ body {
   flex-flow: row wrap;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .aside_container {
